# FreeEvolution

./: CMakeLists.txt  Makefile  README.md
Codeblocks/: Codeblocks.cbp  Codeblocks.depend  Makefile
src/: creature_editor.c  creature_editor.h  creature_model.c  creature_model.h  error_codes.h  font.c  font.h  image.c  image.h  main.c  stage.c  stage.h  stage_cell.c  stage_cell.h  state_information.c  state_information.h
src/creature/: creature_editor.c  creature_model.c  creature_model.h
src/font/: font.c
src/stage/: stage.c  stage.h
src/stage/cell/: stage_cell.c  stage_cell.h
